--- a/Belajar/www/css/github-markdown.css
+++ b/Belajar/www/css/github-markdown.css
@@ -1,4 +1,4 @@
-.markdown-body {
+body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   color: rgba(0, 0, 0, .87);
@@ -23,7 +23,7 @@
 }
 
 .markdown-body h1 {
-  font-size: 2em;
+  /* font-size: 2em; */
   margin: 0.67em 0;
 }
 
@@ -156,7 +156,6 @@
 }
 
 .markdown-body blockquote {
-  font-size: 17px;
   margin: 0;
 }
 
@@ -185,13 +184,13 @@
 
 .markdown-body code {
   font-family: monospace;
-  font-size: 12px;
+  font-size: .75em;
 }
 
 .markdown-body pre {
   margin-top: 0;
   margin-bottom: 0;
-  font: 12px monospace;
+  font: .75em monospace;
 }
 
 .markdown-body>*:first-child {
@@ -467,7 +466,7 @@
 .markdown-body kbd {
   display: inline-block;
   padding: 3px 5px;
-  font-size: 11px;
+  font-size: .75em;
   line-height: 10px;
   color: #555;
   vertical-align: middle;
